# CRUD-With-Rust

./: Cargo.toml
src/: index.html  main.rs
